force-app/main/default/objects/Credit_Detail_Break_Up__c/Credit_Detail_Break_Up__c.object-meta.xml
<CustomObject>
    <label>Credit Detail Break Up</label>
    <nameField>
        <label>Credit Detail Break Up Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Detail Break Ups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>