force-app/main/default/objects/Credit_Detail_Break_Up__c/fields/Aging_181_360__c.field-meta.xml
<CustomField>
    <fullName>Aging_181_360__c</fullName>
    <label>Aging – 181-360</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>