force-app/main/default/objects/Credit_Detail_Break_Up__c/fields/Aging_31_60__c.field-meta.xml
<CustomField>
    <fullName>Aging_31_60__c</fullName>
    <label>Aging – 31-60</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>