force-app/main/default/objects/Credit_Detail_Break_Up__c/fields/Aging_31__c.field-meta.xml
<CustomField>
    <fullName>Aging_31__c</fullName>
    <label>Aging &lt; 31</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>