force-app/main/default/objects/Credit_Detail_Break_Up__c/fields/Aging_61_90__c.field-meta.xml
<CustomField>
    <fullName>Aging_61_90__c</fullName>
    <label>Aging – 61-90</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>