force-app/main/default/objects/Credit_Detail_Break_Up__c/fields/AR_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>AR_Customer_Name__c</fullName>
    <label>AR Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>