force-app/main/default/objects/Credit_Detail_Break_Up__c/fields/Classification_Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>Classification_Invoice_Type__c</fullName>
    <label>Classification Invoice Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>