force-app/main/default/objects/Credit_Detail_Break_Up__c/fields/Collector_Name__c.field-meta.xml
<CustomField>
    <fullName>Collector_Name__c</fullName>
    <label>Collector Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>