force-app/main/default/objects/Credit_Detail_Break_Up__c/fields/Credit_Detail__c.field-meta.xml
<CustomField>
    <fullName>Credit_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Detail</label>
    <referenceTo>Credit_Detail__c</referenceTo>
    <relationshipLabel>Credit Detail Break Ups</relationshipLabel>
    <relationshipName>Credit_Detail_Break_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>