force-app/main/default/objects/Credit_Detail_Break_Up__c/fields/Customer_Balance__c.field-meta.xml
<CustomField>
    <fullName>Customer_Balance__c</fullName>
    <label>Customer Balance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>