force-app/main/default/objects/Credit_Detail_Break_Up__c/fields/Customer_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Customer_Payment_Terms__c</fullName>
    <label>Customer Payment Terms</label>
    <length>100</length>
    <type>Text</type>
</CustomField>