force-app/main/default/objects/Credit_Detail_Break_Up__c/fields/Not_Due_1_360_Days__c.field-meta.xml
<CustomField>
    <fullName>Not_Due_1_360_Days__c</fullName>
    <label>Not Due 1-360 Days</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>