force-app/main/default/objects/Credit_Detail_Break_Up__c/fields/On_Hold__c.field-meta.xml
<CustomField>
    <fullName>On_Hold__c</fullName>
    <label>On Hold</label>
    <length>10</length>
    <type>Text</type>
</CustomField>