force-app/main/default/objects/Credit_Detail_Break_Up__c/fields/Unique_ID_Credit_Detail__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID_Credit_Detail__c</fullName>
    <label>Unique ID Credit Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>